<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/navigation_bar_container"
              style="@style/NavigationBar"
              xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout style="@style/NavigationBarItem">

        <View
            android:id="@+id/navigation_bar_item_stand_line"
            style="@style/NavigationBarItemLine"/>

        <Button
            android:id="@+id/navigation_bar_item_stand"
            style="@style/NavigationBarItemValue"
            android:drawableTop="@drawable/navigation_bar_stand"
            android:text="@string/navigation_bar_stand"/>
    </LinearLayout>

    <!-- <View style="@style/NavigationBarItemSeparateLine" /> -->

    <LinearLayout style="@style/NavigationBarItem">

        <View
            android:id="@+id/navigation_bar_item_green_line"
            style="@style/NavigationBarItemLine"/>

        <Button
            android:id="@+id/navigation_bar_item_green"
            style="@style/NavigationBarItemValue"
            android:drawableTop="@drawable/navigation_bar_green"
            android:text="@string/navigation_bar_green"/>
    </LinearLayout>

    <!-- <View style="@style/NavigationBarItemSeparateLine" /> -->

    <LinearLayout style="@style/NavigationBarItem">

        <View
            android:id="@+id/navigation_bar_item_found_line"
            style="@style/NavigationBarItemLine"/>

        <Button
            android:id="@+id/navigation_bar_item_found"
            style="@style/NavigationBarItemValue"
            android:drawableTop="@drawable/navigation_bar_found"
            android:text="@string/navigation_bar_found"/>
    </LinearLayout>

    <!-- <View style="@style/NavigationBarItemSeparateLine" /> -->

    <LinearLayout style="@style/NavigationBarItem">

        <View
            android:id="@+id/navigation_bar_item_career_line"
            style="@style/NavigationBarItemLine"/>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Button
                android:id="@+id/navigation_bar_item_career"
                style="@style/NavigationBarItemValue"
                android:drawableTop="@drawable/navigation_bar_career"
                android:text="@string/navigation_bar_career"/>

            <TextView
                android:id="@+id/cart_items_count_textview"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="right|top"
                android:layout_marginRight="25dp"
                android:layout_marginTop="3dp"
                android:background="@mipmap/navigation_bar_cartnumber_bg"
                android:gravity="center"
                android:textColor="@color/red"
                android:textSize="12sp"/>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>