<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/home_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_bar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:weightSum="6">

        <RelativeLayout
            android:id="@+id/home_btn_rostrum_layout"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/home_btn_rostrum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:text="@string/rostrum"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/home_btn_rostrum_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:src="@mipmap/ico_line"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/home_btn_nearby_layout"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/home_btn_nearby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:text="@string/nearby"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/home_btn_nearby_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:src="@mipmap/ico_line"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/home_btn_news_layout"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/home_btn_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:text="@string/news"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/home_btn_news_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:src="@mipmap/ico_line"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/home_btn_best_heat_layout"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/home_btn_best_heat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:text="@string/best_heat"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/home_btn_best_heat_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:src="@mipmap/ico_line"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="2"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/home_btn_stand_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:padding="2dp"
                android:src="@mipmap/ico_plus"/>
        </RelativeLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/home_content_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_bar_layout"
        android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/frm_navigation_bar"/>
    </LinearLayout>

</RelativeLayout>